fp-library/tests/ui/result_no_inferable_brand.stderr
error[E0277]: `Result<i32, String>` does not have a unique brand and cannot use brand inference
 --> tests/ui/result_no_inferable_brand.rs:9:30
  |
9 |     let _ = map(|x: i32| x + 1, Ok::<i32, String>(5));
  |             ---                 ^^^^^^^^^^^^^^^^^^^^ the trait `InferableBrand_cdc7cd43dac7585f` is not implemented for `Result<i32, String>`
  |             |
  |             required by a bound introduced by this call
  |
  = note: use the `explicit::` variant with a turbofish to specify the brand manually
  = help: the following other types implement trait `InferableBrand_cdc7cd43dac7585f`:
            &__IB_T
            (A,)
            ArcCoyoneda<'a, F, A>
            BazaarList<'a, FunctionBrand, A, B, T>
            CatList<A>
            Const<'a, R, A>
            Coyoneda<'a, F, A>
            CoyonedaExplicit<'a, F, B, A>
          and $N others
note: required by a bound in `fp_library::functions::map`
 --> src/functions/functor.rs
  |
  |     pub fn map<'a, FA, A: 'a, B: 'a, Marker>(
  |            --- required by a bound in this function
...
  |         FA: InferableBrand_cdc7cd43dac7585f, {
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`
help: use a unary tuple instead
  |
9 |     let _ = map(|x: i32| x + 1, (Ok::<i32, String>(5),));
  |                                 +                    ++

error[E0277]: `Result<i32, String>` does not have a unique brand and cannot use brand inference
 --> tests/ui/result_no_inferable_brand.rs:9:10
  |
9 |     let _ = map(|x: i32| x + 1, Ok::<i32, String>(5));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `InferableBrand_cdc7cd43dac7585f` is not implemented for `Result<i32, String>`
  |
  = note: use the `explicit::` variant with a turbofish to specify the brand manually
  = help: the following other types implement trait `InferableBrand_cdc7cd43dac7585f`:
            &__IB_T
            (A,)
            ArcCoyoneda<'a, F, A>
            BazaarList<'a, FunctionBrand, A, B, T>
            CatList<A>
            Const<'a, R, A>
            Coyoneda<'a, F, A>
            CoyonedaExplicit<'a, F, B, A>
          and $N others
